manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: react-app.com
    http:
      paths:
      - path: /sample
        pathType: Prefix
        backend:
          service:
            name: react-app-service
            port:
              number: 80
